# context-aware-word-vectors

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  bert_sentences.txt  getBertWordVectors.sh  pyproject.toml  results.out  sentences.json
.circleci/: config.yaml  config.yml
requirements/: .gitignore  dev-requirements.txt  requirements.txt  test-requirements.txt
src/context_aware_word_vectors/: bert_similarity.py  context_aware_word_vectors.py
tests/: conftest.py  test_samples.py
validation/: flake8-report.txt  pylint-report.txt  score-with-pylint.py
